manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster-auth
  labels:
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/component: auth
    app.kubernetes.io/part-of: togglemaster
