manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: togglemaster-auth
  labels:
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/component: auth
    app.kubernetes.io/part-of: togglemaster
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: auth-service
        app.kubernetes.io/name: auth-service
        app.kubernetes.io/component: auth
        app.kubernetes.io/part-of: togglemaster
    spec:
      containers:
        - name: auth-service
          image: 637423306132.dkr.ecr.us-east-1.amazonaws.com/togglemaster/auth-service:024db311a14998f140e00f5d29bc5638887ca787
          imagePullPolicy: IfNotPresent
          command:
            - /bin/sh
            - -c
          args:
            - |
              export DATABASE_URL=$(cat /shared/DATABASE_URL)
              exec ./auth-service
          ports:
            - name: http
              containerPort: 8001
          volumeMounts:
            - name: shared-data
              mountPath: /shared
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi

      volumes:
        - name: shared-data
          emptyDir: {}
