manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: togglemaster-auth
  labels:
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/component: auth
    app.kubernetes.io/part-of: togglemaster
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      protocol: TCP
      port: 8001
      targetPort: 8001
